--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ Django==1.11
 gunicorn==19.7.1
 numpy==1.12.1
 packaging==16.8
+protobuf==3.0.0a3
 pyparsing==2.2.0
 pytz==2017.2
+PyYAML==3.12
 six==1.10.0
+tensorflow==0.6.0
